Fixed header spacing

--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -2,6 +2,11 @@
     cursor: pointer;
 }
 
+#splash-header-left{
+    height:3rem;
+}
+
+
 #search-component{
 
     position: relative;
